# python-ergen

./: .gitignore  README.org  pyproject.toml
sample/dvdrental/: erd.yml
src/c3_ergen/: cli.py  types.py
src/c3_ergen/template/: erd.dot.jinja
src/ergen/: cli.py  main.py  types.py
